<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>net.jawr.extensions</groupId>
		<artifactId>jawr-dwr2.x-parent</artifactId>
		<version>3.7-SNAPSHOT</version>
	</parent>
	<artifactId>jawr-dwr2.x-integration-test</artifactId>
	<packaging>war</packaging>
	<name>jawr-dwr2.0.x-integration-test</name>
	<description>Basic web app for Jawr DWR 2.x integration test</description>
	<properties>
		<jawr-integration-test-utils.version>${jawr-core.version}</jawr-integration-test-utils.version>
		<webapp.name>jawr-dwr2.x-integration-test</webapp.name>
	</properties>
	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>jawr-dwr2.x-extension</artifactId>
		</dependency>
		<dependency>
			<groupId>com.carrotsearch</groupId>
			<artifactId>smartsprites</artifactId>
			<exclusions>
				<exclusion>
					<groupId>com.google.collections</groupId>
					<artifactId>google-collections</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.javascript</groupId>
			<artifactId>closure-compiler</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mozilla</groupId>
			<artifactId>rhino</artifactId>
		</dependency>
		<dependency>
			<groupId>com.yahoo.platform.yui</groupId>
			<artifactId>yuicompressor</artifactId>
		</dependency>
		<dependency>
			<groupId>net.jawr</groupId>
			<artifactId>jawr-integration-test-utils</artifactId>
			<version>3.5.1</version>
			<type>test-jar</type>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>servlet-api-2.5</artifactId>
			<version>${jetty.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-api-2.1</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-2.1</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jetty-servlet-tester</artifactId>
			<version>${jetty.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<wtpversion>1.5</wtpversion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>true</skip>
					<argLine>-XX:MaxPermSize=512m -verbose:gc -XX:+PrintClassHistogram</argLine>
				</configuration>
				<executions>
					<execution>
						<id>surefire-it</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<skip>false</skip>
							<systemProperties>
								<property>
									<name>test.web.xml.path</name>
									<value>${basedir}/target/${webapp.name}/WEB-INF/web.xml</value>
								</property>
								<property>
									<name>test.jawr.config.path</name>
									<value>${basedir}/target/${webapp.name}/WEB-INF/classes/jawr.properties</value>
								</property>
								<property>
									<name>test.initial.delay</name>
									<value>5000</value>
								</property>
								<property>
									<name>com.sun.management.jmxremote</name>
								</property>
								<property>
									<name>com.sun.management.jmxremote</name>
								</property>
								-XX:PermSize=1024m -XX:MaxPermSize=1024m
							</systemProperties>

						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<finalName>${webapp.name}</finalName>
	</build>
</project>